# Side-projects

./: .gitignore  Advanced_Python_Summarizer  Auto Summarizer  BETA_READY_CHECKLISTS.md  CODEBASE_OVERVIEW.md  GUI_TASK_MANAGERS_PRD.md  GUI_TASK_MANAGERS_ROADMAP.md  README.md  drafts.txt  interview_summary.txt  plan  pyqt5_workflow_manager.py  task_manager.py  tasks.json  validation_report.md
ai_agent_project/: .gitignore  1.py  README.md  TBOWtacticBot.py  ai_performance.json  ai_refactor_reviews.db  all_stubs.py  auto_fixer.py  confidence_store.json  conftest.py  debugger_files_summary.txt  deletion_log.txt  dependencies.json  docstring_generator.py  error  example.py  extract_passing_tests.py  extract_passing_tests.py.bak  file_watcher.py  fix_imports.py  fix_test_issues.py  function_map.json  launch_project.py  learning_db.json  log.txt  main.py  plan  project_analysis.json  project_context_analyzer.py  project_inventory.json  pyproject.toml  requirements.txt  run_debugger.py  setup.py  task_router.py
ai_agent_project/_SRC FILES/: AgentActorTesting.py  ai_agent.py  main.py  run_dispatcher.py
ai_agent_project/agents/: AgentActor.py  AgentDispatcher.py  AgentRegistry.py  CustomAgent.py  DebuggerAgent.py  JournalAgent.py  TradingAgent.py  __init__.py  agent_dispatcher.py  agent_registry.py  custom_agent.py  external_ai_agent.py
ai_agent_project/ai_engine/: __init__.py  confidence_manager.py  patch_analyzer.py  patch_optimizer.py  patch_review_manager.py  rollback_analysis.py
ai_agent_project/backup/: 1.py.bak  AgentActor.py.bak  AgentBase.py.bak  ai_client.py.bak  (+65 more)
(+442 files in other folders)
